# vaultify

./: .gitignore  .gitmodules  init.sh  meson.build  wasm.ini
.devcontainer/: Dockerfile  devcontainer.json
src/: encryption.c  encryption.h  entries.c  entries.h  entry.c  entry.h  gui_common.h  gui_dialog_show_password.h  gui_edit_url.h  gui_list_urls.h  main.c  vaultify.c  vaultify.h
subprojects/: Unity.wrap  raylib.wrap
test/: test_encryption.c  test_entries.c
